arm64/compat32: Fix handling of 32bits FP registers.

We must consider the aarch32 FP registers as 16 128bits registers, and store
that as the first 16 aarch64 FP registers.

PR: 267788
MFC After: 1 week